# Nova-Studio

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
docs/: ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  FEATURES.md  INSTALL-WINDOWS.md  PACKAGING.md  PREMIERE_PARITY.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  VISION.md
include/nova/core/: Logger.h
include/nova/media/: AudioExporter.h  AudioExtractor.h  GifExporter.h  ImageIO.h  MediaProbe.h  MediaRecorder.h  StockAssetGenerator.h  StockCatalog.h  VideoExporter.h
include/nova/project/: Project.h  ProjectIO.h  ProjectStore.h
include/nova/renderer/: VideoPreviewWidget.h
include/nova/timeline/: Timeline.h
include/nova/ui/: MainWindow.h  PreviewOverlay.h  ProjectWelcomeDialog.h  SidebarPanel.h  TimelineWidget.h
nova-studio/: CMakeLists.txt  README.md
nova-studio/docs/: BUILDING.md  THIRD_PARTY_LICENSES.md
nova-studio/include/nova/media/: Decoder.h
nova-studio/include/nova/timeline/: Timeline.h
nova-studio/include/nova/ui/: TimelineWidget.h
nova-studio/src/app/: main.cpp
nova-studio/src/media/: Decoder.cpp
nova-studio/src/renderer/: VideoPreviewWidget.cpp
nova-studio/src/ui/: MainWindow.cpp  TimelineWidget.cpp
nova-studio/tests/: CMakeLists.txt
scripts/: package.ps1  run.ps1  setup.ps1  setup.sh
src/app/: main.cpp
src/media/: AudioExporter.cpp  AudioExtractor.cpp  GifExporter.cpp  ImageIO.cpp  MediaProbe.cpp  MediaRecorder.cpp  StockAssetGenerator.cpp  VideoExporter.cpp
src/project/: Project.cpp  ProjectIO.cpp  ProjectStore.cpp
src/renderer/: VideoPreviewWidget.cpp
src/ui/: MainWindow.cpp  PreviewOverlay.cpp  ProjectWelcomeDialog.cpp  SidebarPanel.cpp  TimelineWidget.cpp
templates/: blank-1080p.nova  vertical-reels.nova  youtube-1080p.nova
tests/: CMakeLists.txt  decoder_tests.cpp  project_tests.cpp  timeline_tests.cpp
